@@ -35,15 +35,8 @@ Also free to ask on the MDAnalysis mailing list for help:
 
 (Note that the group really is called `mdnalysis-discussion' because
 Google groups forbids any name that contains the string `anal'.)
-
-By default we use setuptools <http://pypi.python.org/pypi/setuptools>.  The
-details of such an "EasyInstall" installation procedure are shown on
-
-  http://peak.telecommunity.com/DevCenter/EasyInstall
-
-By changing the code below you can also switch to a standard distutils
-installation.
 """
+
 from __future__ import print_function
 from setuptools import setup, Extension, find_packages
 from distutils.ccompiler import new_compiler
@@ -371,8 +364,7 @@ if __name__ == '__main__':
           # you might prefer to use the version available through your
           # packaging system
           extras_require={
-              'AMBER': ['netCDF4>=1.0'],  # for AMBER netcdf, also needs HDF5
-                                          # and netcdf-4
+              'AMBER': ['scipy'],  # for AMBER netcdf, (does NOT need HDF5)
               'analysis': [
                   'matplotlib',
                   'scipy',
